project('gtkd', 'd', version: '3.7.1')

pkg = import('pkgconfig')

gtk_ver = '>=3.22.0'
glib_ver = '>=2.51.2'
gtk_dep = dependency ('gtk+-3.0', version: gtk_ver)
glib_dep = dependency ('glib-2.0', version: glib_ver)

glibd_sources = ['generated/gtkd/glib/ArrayG.d',
                 'generated/gtkd/glib/AsyncQueue.d',
                 'generated/gtkd/glib/Atomic.d',
                 'generated/gtkd/glib/Base64.d',
                 'generated/gtkd/glib/BBTree.d',
                 'generated/gtkd/glib/BookmarkFile.d',
                 'generated/gtkd/glib/ByteArray.d',
                 'generated/gtkd/glib/Bytes.d',
                 'generated/gtkd/glib/CharacterSet.d',
                 'generated/gtkd/glib/Checksum.d',
                 'generated/gtkd/glib/Child.d',
                 'generated/gtkd/glib/Cond.d',
                 'generated/gtkd/glib/ConstructionException.d',
                 'generated/gtkd/glib/DataList.d',
                 'generated/gtkd/glib/DataSet.d',
                 'generated/gtkd/glib/Date.d',
                 'generated/gtkd/glib/DateTime.d',
                 'generated/gtkd/glib/Directory.d',
                 'generated/gtkd/glib/ErrorG.d',
                 'generated/gtkd/glib/FileUtils.d',
                 'generated/gtkd/glib/GException.d',
                 'generated/gtkd/glib/GLib.d',
                 'generated/gtkd/glib/HashTable.d',
                 'generated/gtkd/glib/HashTableIter.d',
                 'generated/gtkd/glib/Hmac.d',
                 'generated/gtkd/glib/Hook.d',
                 'generated/gtkd/glib/HookList.d',
                 'generated/gtkd/glib/Hostname.d',
                 'generated/gtkd/glib/IConv.d',
                 'generated/gtkd/glib/Idle.d',
                 'generated/gtkd/glib/Internationalization.d',
                 'generated/gtkd/glib/IOChannel.d',
                 'generated/gtkd/glib/KeyFile.d',
                 'generated/gtkd/glib/ListG.d',
                 'generated/gtkd/glib/ListSG.d',
                 'generated/gtkd/glib/MainContext.d',
                 'generated/gtkd/glib/MainLoop.d',
                 'generated/gtkd/glib/MappedFile.d',
                 'generated/gtkd/glib/MatchInfo.d',
                 'generated/gtkd/glib/Memory.d',
                 'generated/gtkd/glib/MemorySlice.d',
                 'generated/gtkd/glib/MessageLog.d',
                 'generated/gtkd/glib/Messages.d',
                 'generated/gtkd/glib/Module.d',
                 'generated/gtkd/glib/Mutex.d',
                 'generated/gtkd/glib/Node.d',
                 'generated/gtkd/glib/Once.d',
                 'generated/gtkd/glib/OptionContext.d',
                 'generated/gtkd/glib/OptionGroup.d',
                 'generated/gtkd/glib/Pattern.d',
                 'generated/gtkd/glib/Private.d',
                 'generated/gtkd/glib/PtrArray.d',
                 'generated/gtkd/glib/Quark.d',
                 'generated/gtkd/glib/QueueG.d',
                 'generated/gtkd/glib/RandG.d',
                 'generated/gtkd/glib/RecMutex.d',
                 'generated/gtkd/glib/Regex.d',
                 'generated/gtkd/glib/RWLock.d',
                 'generated/gtkd/glib/ScannerG.d',
                 'generated/gtkd/glib/Sequence.d',
                 'generated/gtkd/glib/SequenceIter.d',
                 'generated/gtkd/glib/ShellUtils.d',
                 'generated/gtkd/glib/SimpleXML.d',
                 'generated/gtkd/glib/Source.d',
                 'generated/gtkd/glib/Spawn.d',
                 'generated/gtkd/glib/Str.d',
                 'generated/gtkd/glib/StringChunk.d',
                 'generated/gtkd/glib/StringG.d',
                 'generated/gtkd/glib/TestLogBuffer.d',
                 'generated/gtkd/glib/TestLogMsg.d',
                 'generated/gtkd/glib/TestSuite.d',
                 'generated/gtkd/glib/Thread.d',
                 'generated/gtkd/glib/ThreadPool.d',
                 'generated/gtkd/glib/Timeout.d',
                 'generated/gtkd/glib/Timer.d',
                 'generated/gtkd/glib/TimeVal.d',
                 'generated/gtkd/glib/TimeZone.d',
                 'generated/gtkd/glib/TrashStack.d',
                 'generated/gtkd/glib/Unicode.d',
                 'generated/gtkd/glib/UnixUtils.d',
                 'generated/gtkd/glib/URI.d',
                 'generated/gtkd/glib/Util.d',
                 'generated/gtkd/glib/Uuid.d',
                 'generated/gtkd/glib/VariantBuilder.d',
                 'generated/gtkd/glib/Variant.d',
                 'generated/gtkd/glib/VariantDict.d',
                 'generated/gtkd/glib/VariantIter.d',
                 'generated/gtkd/glib/VariantType.d',
                 'generated/gtkd/glib/Version.d',
                 'generated/gtkd/glib/c/functions.d',
                 'generated/gtkd/glib/c/types.d',
                 #GObject
                 'generated/gtkd/gobject/Binding.d',
                 'generated/gtkd/gobject/Boxed.d',
                 'generated/gtkd/gobject/CClosure.d',
                 'generated/gtkd/gobject/Closure.d',
                 'generated/gtkd/gobject/Enums.d',
                 'generated/gtkd/gobject/Flags.d',
                 'generated/gtkd/gobject/ObjectClass.d',
                 'generated/gtkd/gobject/ObjectG.d',
                 'generated/gtkd/gobject/ParamSpec.d',
                 'generated/gtkd/gobject/ParamSpecPool.d',
                 'generated/gtkd/gobject/Signals.d',
                 'generated/gtkd/gobject/TypeClass.d',
                 'generated/gtkd/gobject/Type.d',
                 'generated/gtkd/gobject/TypeInstance.d',
                 'generated/gtkd/gobject/TypeInterface.d',
                 'generated/gtkd/gobject/TypeModule.d',
                 'generated/gtkd/gobject/TypePluginIF.d',
                 'generated/gtkd/gobject/TypePluginT.d',
                 'generated/gtkd/gobject/TypeValueTable.d',
                 'generated/gtkd/gobject/ValueArray.d',
                 'generated/gtkd/gobject/Value.d',
                 'generated/gtkd/gobject/WeakRef.d',
                 'generated/gtkd/gobject/c/functions.d',
                 'generated/gtkd/gobject/c/types.d',
                 # Mixing generated code and non generated code...argh
                 'src/gtkd/Implement.d',
                 'src/gtkd/Loader.d',
                 'src/gtkd/paths.d',
                 # This should be split it in different folders
                 'src/gtkc/glib.d']

# They should go in different root folders, or even different projects.
# For now, include the dir so relative imports (glib.foo) work.
include_dirs = include_directories ('generated/gtkd/')

project_soversion = 0
glibd = library('glibd',
                glibd_sources,
                dependencies: [glib_dep],
                include_directories: include_dirs,
                install: true,
                version: meson.project_version(),
                soversion: project_soversion)

pkg.generate(name: 'glibd',
             libraries: glibd,
             subdirs: 'd/glib',
             version: meson.project_version(),
             description: 'D bindings for gtk+')

install_subdir('generated/gtkd/glib/', install_dir: 'include/d/glib/')
install_subdir('generated/gtkd/gobject/', install_dir: 'include/d/glib/')

glibd_dep = declare_dependency (link_with: glibd,
                                include_directories: include_dirs,
                                dependencies: [glib_dep])

executable('GLibBasic',
           ['demos/glib/Basic.d'],
           dependencies: [glibd_dep],
           include_directories: include_dirs)
